{
    "name": "GameControls",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "df5352c2-7f44-46b2-8b8f-e71ba8ff287b",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "879d43fb-29c8-417f-bec2-b09647006e26",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Roll",
                    "type": "Value",
                    "id": "9a93dce5-aff1-49d1-a824-38643e4dc0c0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "141939af-749d-4efb-b897-1c9eca114d2f",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46ce8bdf-0a6b-49a2-8cc4-8b7bbf36c388",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ac012aa-a40d-46ae-a801-9d9e4bac344a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}